--- a/src/locales/common/en.json
+++ b/src/locales/common/en.json
@@ -7,11 +7,51 @@
     },
     "test": "Test",
     "disabled": "Disabled",
+    "default": "default",
     "Game": {
         "mistake": {
             "rule-violation": "Rule violation | Rule violations",
             "incorrect-value": "Incorrect value | Incorrect values"
+        },
+        "difficulty": {
+            "label": "Difficulty",
+            "Beginner": "Beginner",
+            "Very Easy": "Very Easy",
+            "Easy": "Easy",
+            "Normal": "Normal",
+            "Hard": "Hard",
+            "Very Hard": "Very Hard",
+            "Extreme": "Extreme"
+        },
+        "board-size": {
+            "label": "Board size",
+            "normal": "Normal",
+            "tall": "Tall",
+            "odd": "Odd"
+        },
+        "replay": "replay"
+    },
+    "Home": {
+        "buttons": {
+            "new-game": "New Game",
+            "help": "Help",
+            "tutorial": "Tutorial",
+            "continue": "Continue"
         }
     },
-    "default": "default"
+    "NewPuzzle": {
+        "title": "New Puzzle",
+        "load-save": "Load save",
+        "options": {
+            "automatic-replay-mode": "Automatic Replay Mode"
+        },
+        "starting-a-new-puzzle-will-overwrite": "Starting a new puzzle will overwrite your current puzzle in progress.",
+        "StartGame": {
+            "start-game": "Start game",
+            "select-puzzle-size": "Select a puzzle size",
+            "some-puzzle-sizes-are-disabled-for-harder-puzzles": "Note: some puzzle sizes are disabled for harder puzzles.",
+            "loading-creating-game": "Creating game...",
+            "loading-loading-replay": "Loading replay..."
+        }
+    }
 }
