--- a/src/locales/common/nl.json
+++ b/src/locales/common/nl.json
@@ -1,76 +1,99 @@
 {
-    "routeButton": {
-        "home": "Home",
-        "stats": "Stats",
-        "settings": "Instellingen",
-        "tools": "Gereedschap"
+  "routeButton": {
+    "home": "Home",
+    "stats": "Stats",
+    "settings": "Instellingen",
+    "tools": "Gereedschap"
+  },
+  "disabled": "Uitgeschakeld",
+  "Game": {
+    "mistake": {
+      "rule-violation": "Regelovertreding | Regelovertredingen",
+      "incorrect-value": "Onjuiste waarde | Onjuiste waarden"
     },
-    "disabled": "Uitgeschakeld",
-    "Game": {
-        "mistake": {
-            "rule-violation": "Regelovertreding | Regelovertredingen",
-            "incorrect-value": "Onjuiste waarde | Onjuiste waarden"
-        },
-        "difficulty": {
-            "label": "Moeilijkheid",
-            "Beginner": "Beginner",
-            "Very Easy": "Zeer Makkelijk",
-            "Easy": "Makkelijk",
-            "Normal": "Normaal",
-            "Hard": "Moeilijk",
-            "Very Hard": "Zeer Moeilijk",
-            "Extreme": "Extreem"
-        },
-        "board-size": {
-            "label": "Puzzelgrootte",
-            "normal": "Normaal",
-            "tall": "Langwerpig",
-            "odd": "Oneven"
-        },
-        "replay": "replay"
+    "difficulty": {
+      "label": "Moeilijkheid",
+      "Beginner": "Beginner",
+      "Very Easy": "Zeer Makkelijk",
+      "Easy": "Makkelijk",
+      "Normal": "Normaal",
+      "Hard": "Moeilijk",
+      "Very Hard": "Zeer Moeilijk",
+      "Extreme": "Extreem"
     },
-    "test": "Test",
-    "default": "standaard",
-    "NewPuzzle": {
-        "title": "Nieuwe Puzzel",
-        "load-save": "Hervat huidige puzzel",
-        "options": {
-            "automatic-replay-mode": "Automatische Replay-modus"
-        },
-        "starting-a-new-puzzle-will-overwrite": "Een nieuwe puzzel starten zal de voortgang in je huidige puzzel overschrijven.",
-        "StartGame": {
-            "start-game": "Start spel",
-            "select-puzzle-size": "Selecteer een puzzelgrootte",
-            "some-puzzle-sizes-are-disabled-for-harder-puzzles": "Opmerking: sommige puzzelgroottes zijn uitgeschakeld voor moeilijkere puzzels.",
-            "loading-creating-game": "Puzzel aan het maken...",
-            "loading-loading-replay": "Puzzel laden..."
-        }
+    "board-size": {
+      "label": "Puzzelgrootte",
+      "normal": "Normaal",
+      "tall": "Langwerpig",
+      "odd": "Oneven"
     },
-    "Home": {
-        "buttons": {
-            "continue": "Hervatten",
-            "help": "Help",
-            "new-game": "Nieuw Spel",
-            "tutorial": "Tutorial"
-        }
+    "replay": "replay"
+  },
+  "test": "Test",
+  "default": "standaard",
+  "NewPuzzle": {
+    "title": "Nieuwe Puzzel",
+    "load-save": "Hervat huidige puzzel",
+    "options": {
+      "automatic-replay-mode": "Automatische Replay-modus"
     },
-    "PlayPuzzle": {
-        "controls": {
-            "undo": "Ongedaan maken",
-            "restart": "Herstart",
-            "check": "Controleer",
-            "hint": "Hint"
-        },
-        "paused": "Gepauzeerd",
-        "progress-percentage": "Voortgang:{p}%",
-        "dd": {
-            "set-bookmark": "Maak bladwijzer",
-            "delete-bookmark": "Verwijder bladwijzer",
-            "copy-board-string": "Kopieer puzzel 'BoardString'",
-            "solve-puzzle": "Puzzel oplossen",
-            "solve-instantly": "Direct oplossen",
-            "increase-time-by-n-s": "Tijd verhogen met {n}s",
-            "solve-all-triples": "Los alle 'Triples' op"
-        }
+    "starting-a-new-puzzle-will-overwrite": "Een nieuwe puzzel starten zal de voortgang in je huidige puzzel overschrijven.",
+    "StartGame": {
+      "start-game": "Start spel",
+      "select-puzzle-size": "Selecteer een puzzelgrootte",
+      "some-puzzle-sizes-are-disabled-for-harder-puzzles": "Opmerking: sommige puzzelgroottes zijn uitgeschakeld voor moeilijkere puzzels.",
+      "loading-creating-game": "Puzzel aan het maken...",
+      "loading-loading-replay": "Puzzel laden..."
     }
+  },
+  "Home": {
+    "buttons": {
+      "continue": "Hervatten",
+      "help": "Help",
+      "new-game": "Nieuw Spel",
+      "tutorial": "Tutorial"
+    }
+  },
+  "PlayPuzzle": {
+    "controls": {
+      "undo": "Ongedaan maken",
+      "restart": "Herstart",
+      "check": "Controleer",
+      "hint": "Hint"
+    },
+    "paused": "Gepauzeerd",
+    "progress-percentage": "Voortgang:{p}%",
+    "dd": {
+      "set-bookmark": "Maak bladwijzer",
+      "delete-bookmark": "Verwijder bladwijzer",
+      "copy-board-string": "Kopieer puzzel 'BoardString'",
+      "solve-puzzle": "Puzzel oplossen",
+      "solve-instantly": "Direct oplossen",
+      "increase-time-by-n-s": "Tijd verhogen met {n}s",
+      "solve-all-triples": "Los alle 'Triples' op"
+    }
+  },
+  "HowToPlay": {
+    "BasicRules": {
+      "description": "Het doel van een binaire puzzel is eenvoudig: vul elke cel van het raster met een {symbolZero} of een {symbolOne} volgens enkele eenvoudige regels. Deze 3 belangrijke regels zijn:",
+      "title": "Basisregels",
+      "balanced-lines": {
+        "description-1": "Elke rij en kolom moet een gelijk aantal {symbolOnePlural} en {symbolZeroPlural} bevatten.",
+        "description-2": "In een 4x4-raster moet elke rij en kolom bijvoorbeeld twee {symbolOnePlural} en twee {symbolZeroPlural} bevatten.",
+        "title": "Gebalanceerde lijnen",
+        "example-correct": "Er zijn precies 3 {symbolZeroPlural} en 3 {symbolOnePlural} in de rij van 6 cellen.",
+        "example-incorrect": "Er zijn vier {symbolZeroPlural}, maar de rij heeft zes cellen, wat betekent dat er slechts drie {symbolZeroPlural} zijn toegestaan."
+      },
+      "max-two-consecutive": {
+        "description-2": "Dit betekent dat je in geen enkele rij of kolom drie opeenvolgende {symbolOnePlural} of {symbolZeroPlural} kunt hebben.",
+        "title": "Maximaal twee opeenvolgende",
+        "description-1": "Er mogen niet meer dan twee van hetzelfde TODO:symbol/number/color naast of onder elkaar staan."
+      }
+    },
+    "overview": {
+      "page-description": "Welkom bij Takuzu! Dit puzzeltype, ook wel binaire puzzel genoemd, is een heerlijke mix van logica en strategie. Het is perfect voor puzzelliefhebbers en nieuwkomers en biedt een unieke mentale uitdaging. Onze gids is hier om u te helpen de basisbeginselen te begrijpen en het plezier in elk raster te ontdekken. Laten we beginnen!"
+    },
+    "LabelCorrect": "Juist:",
+    "LabelIncorrect": "Onjuist:"
+  }
 }
