--- a/src/locales/common/nl.json
+++ b/src/locales/common/nl.json
@@ -172,6 +172,33 @@
         "solved-label": "Opgelost",
         "time-average": "Gemiddeld",
         "time-best": "Beste",
-        "view-all-statistics": "Bekijk alle statistieken"
+        "view-all-statistics": "Bekijk alle statistieken",
+        "record": {
+            "first-puzzle-solved": "Eerste puzzel opgelost!",
+            "new-time-record": "Persoonlijk record!"
+        },
+        "message": {
+            "notAddedToDbCheats": "Puzzel is niet opgeslagen in je geschiedenis, omdat je cheats hebt gebruikt.",
+            "firstTotal": "Je hebt je allereerste puzzel ooit opgelost!",
+            "hardestEver": "Dit was de moeilijkste puzzel die je ooit hebt opgelost, goed gedaan!",
+            "firstOfDifficulty": "Je hebt je eerste puzzel op het '@:{difficultyKey}' niveau opgelost.",
+            "firstOfSize": "Eerste keer een {dimensions} puzzel opgelost.",
+            "firstOfSizeDifficulty": "Eerste keer een [{dimensions}] puzzel opgelost op het '@:{difficultyKey}' niveau.",
+            "timeRecordLarge": "Je was een ongelooflijke {improvementPercentage}% sneller dan je vorige beste tijd!",
+            "timeRecord": "Je hebt je beste tijd verbeterd met {differenceSec}s!",
+            "replayTimeRecord": "Dit is de {numPlaysOrdinal} keer dat je deze exacte puzzel hebt opgelost. Je was {differenceSec}s sneller dan je snelste tijd.",
+            "almostTimeRecordAbsolute": "Oef, zo dichtbij het zetten van een nieuw tijdrecord. Je was slechts {differenceSec}s langzamer dan je persoonlijk record.",
+            "almostTimeRecordPercentage": "Je was bijna een nieuw tijdrecord aan het zetten! Je was slechts {differencePercentage}% langzamer.",
+            "muchBetterThanAverageAbsolute": "Je hebt deze puzzel sneller opgelost dan je gemiddelde met een ongelooflijke {differenceSec}s!",
+            "muchBetterThanAveragePercentage": "Dat was veel sneller dan gemiddeld! Je was {improvementPercentage}% sneller.",
+            "betterThanAverage": "Je was {differenceSec}s sneller dan je vorige gemiddelde.",
+            "worstEver": "Dit was je zwaarste uitdaging tot nu toe, een nieuw persoonlijk record voor de langste tijd genomen.",
+            "nearlyWorstEver": "Bijna je langzaamste oplossing, maar je hebt toch je persoonlijk slechtste tijd verslagen!",
+            "replayPlaysTotal": "Dit is de {numPlaysOrdinal} keer dat je deze exact dezelfde puzzel hebt opgelost, met je beste tijd zijnde {bestPreviousTimeMinSec}.",
+            "playsTotal": "Je hebt nu in totaal {totalSolved} puzzels opgelost.",
+            "playsToday": "Vandaag heb je {totalSolvedToday} puzzels opgelost.",
+            "playsConfigTotal": "Je hebt in totaal {count} puzzels opgelost met {dimensions} afmetingen op het @:{difficultyKey} niveau.",
+            "playsConfigToday": "Je hebt vandaag {count} puzzels gespeeld met {dimensions} afmetingen op het @:{difficultyKey} niveau."
+        }
     }
 }
